--- a/Index.html
+++ b/Index.html
@@ -11,26 +11,38 @@
 				<nav>
 					<ul>
 						<li><a href="Index.html">Home</a></li>
-						<li><a href="About.html">About</a></li>
-						<li><a href="Contact.html">Contact</a></li>
+						<li><a href="Index.html">About</a></li>
+						<li><a href="Index.html">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
 			<section>
 				<div class="index-post"><img src="Images/Overwatch.jpg">
 				<a href="Payment.html">Overwatch</a>
-				<p>Fill With information.</p>
+				<p>oldiers. Scientists. Adventurers. Oddities. 
+
+In a time of global crisis, an international task force of heroes banded together to restore peace to a war-torn world: OVERWATCH.
+
+Overwatch ended the crisis, and helped maintain peace in the decades that followed, inspiring an era of exploration, innovation, and discovery. But, after many years, Overwatch’s influence waned, and it was eventually disbanded.
+
+Now, conflict is rising across the world again, and the call has gone out to heroes old and new. Are you with us?</p>
 				</div>
 				<div class="index-post"><img src="Images/wow.jpg" height="300">
 				<a href="Payment.html">World of Warcraft Legion</a>
-				<p>Fill With information.</p>
+				<p>Begin your campaign on the Broken Shore, storm the Cathedral of Eternal Night and rally the armies of Legionfall!</p>
 				</div>
 				<div class="index-post"><img src="Images/Hearthstone.png" height="300">
 				<a href="Payment.html">Hearthstone</a>
-				<p>Fill With information.</p></div>
+				<p>Sheathe your sword, draw your deck, and get ready for Hearthstone - the fast-paced strategy card game that's easy to learn and massively fun. Start a free game and play your cards to sling spells, summon creatures, and command the heroes of Warcraft in duels of epic strategy.</p></div>
 			</section>
-			<aside>This is the aside</aside>
-			<footer>This is the footer</footer>
+			<aside>
+					<h1>Bundles</h1>
+					<div class="index-post"><img src="Images/Bundle.png" height="100"></div>
+					<div class="index-post1"><img src="Images/Paypal.png" height="100"></div>
+			</aside>
+			<footer>
+			<h1>Made By Adrian Pedrazzoli</h1>
+			</footer>
 		</div>
 	</body>
 </html>
